@@ -1,0 +1,6 @@
+		<item>
+			<title>{ $TITLE }</title>
+			<link>{ $LINK }</link>
+			<media:thumbnail url="{ $THUMBNAIL }"/>
+			<media:content url="{ $CONTENT }"/>
+		</item> 
